force-app/main/default/objects/KTA_Risk_Score_Setting__mdt/KTA_Risk_Score_Setting__mdt.object-meta.xml
<CustomObject>
    <label>KTA Risk Score Setting</label>
    <pluralLabel>KTA Risk Score Settings</pluralLabel>
</CustomObject>