force-app/main/default/objects/KTA_Risk_Score_Setting__mdt/fields/KTA_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>KTA_Endpoint__c</fullName>
    <description>Endpoint used by the KTA Risk Score Application</description>
    <label>KTA Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>