force-app/main/default/objects/KTA_Risk_Score_Setting__mdt/fields/KTA_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>KTA_Session_Id__c</fullName>
    <description>Session Id used by the KTA Risk Score Application</description>
    <label>KTA Session Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>