force-app/main/default/objects/KTA_Risk_Score_Setting__mdt/fields/KTA_Task_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>KTA_Task_Record_Type__c</fullName>
    <description>Label of the Task Record Type used by the KTA Risk Score Application</description>
    <label>KTA Task Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>