force-app/main/default/objects/KTA_Risk_Score_Setting__mdt/listViews/All_KTA_Risk_Score.listView-meta.xml
<ListView>
    <fullName>All_KTA_Risk_Score</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>KTA_Endpoint__c</columns>
    <columns>KTA_Process_Id__c</columns>
    <columns>KTA_Session_Id__c</columns>
    <columns>KTA_Task_Record_Type__c</columns>
    <columns>Active__c</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <filterScope>Everything</filterScope>
    <label>All - KTA Risk Score</label>
</ListView>